# confiture

./: .gitignore  justfile  pyproject.toml  todo.md
src/: db.sqlite3  manage.py
src/confiture/: asgi.py  auth_adapter.py  settings.py  urls.py  wsgi.py
src/core/: admin.py  models.py  types.py  urls.py  views.py
src/core/adapters/: caprover.py  spec.py
src/core/contexts/: breadcrumbs.py
src/core/management/commands/: run_adapter.py  seed.py
src/core/migrations/: 0001_initial.py  0002_alter_configitem_type.py  0002_configitemvalue_unique_item_per_environment.py  0003_adapterconfig.py  0004_rename_conifg_adapterconfig_config.py
src/core/templates/core/: environment_index.html  index.html  org_index.html  project_index.html  service_index.html
src/core/templates/cotton/: card.html  config-table-row-form.html  config-table-row.html  config-table.html  lucide.html  nav-breadcrumbs.html  project-card.html  table-cell.html
src/core/templates/cotton/breadcrumb/: item.html  s.html
src/core/templates/cotton/config/: item-form.html  item-value-form.html  item-value.html  item.html  row.html  table.html
src/core/templates/cotton/layouts/: base.html  private.html  public.html
src/core/templatetags/: core_extras.py
src/core/views/: __init__.py  index.py
src/core/views/environment/: index.py  to_clipboard.py
src/core/views/org/: index.py
src/core/views/project/: index.py
src/core/views/service/: index.py
src/static/css/: output.css
src/static_src/: package-lock.json  package.json  tailwind.config.js
src/static_src/css/: input.css
